[gd_scene load_steps=15 format=3 uid="uid://lnk1uxthf1qj"]

[ext_resource type="Script" uid="uid://c7lv7gefntru0" path="res://elements/enemy/roboto_jacare/ai_enemy_jacare.gd" id="1_84w6d"]
[ext_resource type="PackedScene" uid="uid://cjcigmwmyr5q2" path="res://elements/enemy/roboto_jacare/mesh/graphic_jacare_catapulta.tscn" id="1_iycos"]
[ext_resource type="PackedScene" uid="uid://d3ldqofc80lrh" path="res://elements/enemy/projectiles/screen_projectile/proj_carpa/screen_projectile_carpa.tscn" id="2_6p2an"]
[ext_resource type="PackedScene" uid="uid://ywymskkj85vs" path="res://elements/vfx/vfx_explosion/vfx_explosion.tscn" id="2_83kcj"]
[ext_resource type="Script" uid="uid://b3g5atumyrird" path="res://systems/health/health.gd" id="3_qj0al"]
[ext_resource type="PackedScene" uid="uid://uhdrvryhkms1" path="res://elements/vfx/vfx_enemy_event_attention.tscn" id="4_0tu6b"]
[ext_resource type="PackedScene" uid="uid://cr2uh84sb72q" path="res://elements/enemy/chaser/enemy_chaser.tscn" id="4_hfl7q"]
[ext_resource type="PackedScene" uid="uid://cldmf33qdr6vk" path="res://elements/attack_previews/screen_attack_preview/screen_attack_preview.tscn" id="6_fs8qb"]
[ext_resource type="Script" uid="uid://dj2x7ekyg32b7" path="res://systems/score/score_giver.gd" id="7_cpd5m"]
[ext_resource type="Script" uid="uid://cr5xxhd04vkgu" path="res://addons/gap/api/accessibility_high_contrast_object.gd" id="8_eidqu"]
[ext_resource type="Resource" uid="uid://chxc7jei6iwap" path="res://elements/score/score_info_jacare.tres" id="9_orkjc"]
[ext_resource type="PackedScene" uid="uid://dofs6j5418rhr" path="res://elements/attack_previews/out_of_screen_warning_origin.tscn" id="12_83o0c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xg1tr"]
radius = 0.6
height = 1.75

[sub_resource type="GDScript" id="GDScript_hfl7q"]
script/source = "extends Node

@export var force:float = 5.0;

func _on_enemy_jacare_create_leftover_enemy(instance: Node3D, index: int) -> void:
	var chaser := instance as Enemy_Chaser;
	var speed:Vector3 = Vector3.BACK;
	
	#if equally_separated_numbers.is_empty():
		#var len:int = $\"..\".leftover_enemy_amount;
		#equally_separated_numbers = NumberUtils.get_equally_separated_numbers(-PI * 0.25, PI * 0.25, len)
	
	var direction:Vector3 = instance.global_basis.z;
	chaser.global_basis = Basis.IDENTITY;
	chaser.set_speed(direction * force); 
"

[node name="EnemyJacare" type="Node3D" node_paths=PackedStringArray("leftover_enemy_only_if_in_screen", "needs_screen_to_start")]
script = ExtResource("1_84w6d")
projectile = ExtResource("2_6p2an")
vfx_die = ExtResource("2_83kcj")
vfx_before_shoot = ExtResource("4_0tu6b")
shoot_time = 3.0
use_token = "jacare"
token_amount = 2
shoot_damage_tolerance = 0.7
time_pre = 0.1
leftover_enemy_only_if_in_screen = NodePath("Body/VisibleOnScreenNotifier3D")
leftover_enemy_scene = ExtResource("4_hfl7q")
leftover_enemy_amount = 2
leftover_enemy_identity_basis = false
distanceMax = 8.0
walkAndStop = true
needs_screen_to_start = NodePath("Body/VisibleOnScreenNotifier3D")
time_after_screen_to_start_min = 0.25
time_after_screen_to_start_max = 2.0
walkVelocity = Vector3(0, 0, 5)

[node name="Body" type="CharacterBody3D" parent="." groups=["enemy_position"]]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 2

[node name="Health" type="Node" parent="Body" node_paths=PackedStringArray("feedback") groups=["enemy_healths"]]
script = ExtResource("3_qj0al")
max_amount = 3.0
frames_until_send_death_signal = 4
feedback = [NodePath("../Graphic")]
feedback_ignore_contains_divided_by_commas = "lamp_on"

[node name="Graphic" parent="Body" instance=ExtResource("1_iycos")]
unique_name_in_owner = true

[node name="AccessibilityHighContrastObject" type="Node" parent="Body/Graphic"]
script = ExtResource("8_eidqu")
high_contrast_group = &"enemy"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.466044, 0.419778)
shape = SubResource("CapsuleShape3D_xg1tr")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.478333, 0)
aabb = AABB(-1.9896, -1, -1.99414, 3.97921, 2, 3.98829)

[node name="ScreenAttackPreview" parent="Body" instance=ExtResource("6_fs8qb")]

[node name="ScoreGiver" type="Node" parent="Body" node_paths=PackedStringArray("health", "point_position")]
script = ExtResource("7_cpd5m")
info = ExtResource("9_orkjc")
health = NodePath("../Health")
point_position = NodePath("..")

[node name="OutOfScreenWarningOrigin" parent="Body" instance=ExtResource("12_83o0c")]
aabb = AABB(-0.693, -0.5, -1.3762, 1.386, 1, 2.7524)

[node name="Make Chaser Go" type="Node" parent="."]
script = SubResource("GDScript_hfl7q")
force = 6.0

[connection signal="created_leftover_enemy" from="." to="Make Chaser Go" method="_on_enemy_jacare_create_leftover_enemy"]
[connection signal="dead" from="Body/Health" to="." method="_on_health_dead"]
[connection signal="hit" from="Body/Health" to="." method="_on_health_hit"]
[connection signal="screen_exited" from="Body/VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
